--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,13 @@ services:
     env_file:
       - ./servico-autenticacao/.env
     ports:
-      - '5432:5432'
+      - "5432:5432"
+
+  postgres_catalogo:
+    image: postgres:latest
+    container_name: service_catalogo_db
+    restart: always
+    env_file:
+      - ./servico-catalogo-cursos/.env
+    ports:
+      - "5433:5432"
