Revert "Merge pull request #12 from joaoev/dev"
This reverts commit 97e43ede8df17adb1fd7f564c1f87847368f9f78, reversing
changes made to f0644eaad32f265a0a77c0efa5703dadab008bf4.

--- a/servico-atividade/package.json
+++ b/servico-atividade/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "servico-conteudo-aulas",
+  "name": "servico-atividades",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
