--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     container_name: service_catalogo_db
     restart: always
     env_file:
-      - ./servico-catalogo/.env
+      - ./servico-catalogo-cursos/.env
     ports:
       - "5433:5432"
 
@@ -27,20 +27,20 @@ services:
     ports:
       - "5434:5432"
 
-  # postgres_matriculas:
-  #   image: postgres:latest
-  #   container_name: service_matriculas_db
-  #   restart: always
-  #   env_file:
-  #     - ./servico-matriculas/.env
-  #   ports:
-  #     - "5435:5432"
+  postgres_matriculas:
+    image: postgres:latest
+    container_name: service_matriculas_db
+    restart: always
+    env_file:
+      - ./servico-matriculas/.env
+    ports:
+      - "5435:5432"
 
-  # postgres_atividades:
-  #   image: postgres:latest
-  #   container_name: service_atividades_db
-  #   restart: always
-  #   env_file:
-  #     - ./servico-atividades/.env
-  #   ports:
-  #     - "5436:5432"
+  postgres_atividades:
+    image: postgres:latest
+    container_name: service_atividades_db
+    restart: always
+    env_file:
+      - ./servico-atividades/.env
+    ports:
+      - "5436:5432"
