--- a/servico-aulas/package.json
+++ b/servico-aulas/package.json
@@ -16,7 +16,7 @@
     "typescript": "^5.9.3"
   },
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch --env-file=.env src/index.ts",
     "typecheck": "tsc --noEmit",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
