--- a/servico-matricula/.gitignore
+++ b/servico-matricula/.gitignore
@@ -1,49 +1,90 @@
-# Dependencies
+########################################
+# Node.js
+########################################
 node_modules/
-pnpm-lock.yaml
-package-lock.json
-yarn.lock
-
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# Build output
-dist/
-build/
-*.tsbuildinfo
-
-# Prisma
-generated/
-
-# Logs
-logs/
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
+########################################
+# Environment Variables
+########################################
+.env*
+!.env.example
+
+########################################
+# Build output
+########################################
+dist/
+build/
+out/
+coverage/
+
+########################################
+# TypeScript
+########################################
+*.tsbuildinfo
+
+########################################
+# Prisma
+########################################
+/generated/
+prisma/dev.db
+prisma/dev.sqlite
+prisma/test.db
+prisma/test.sqlite
+prisma/.env
+
+########################################
 # OS
+########################################
 .DS_Store
 Thumbs.db
-*.swp
-*.swo
-*~
+ehthumbs.db
+Icon?
+Desktop.ini
 
-# IDE
+########################################
+# IDEs
+########################################
 .vscode/
 .idea/
-*.sublime-project
-*.sublime-workspace
+.history/
+.swp
+.swo
+.code-workspace
 
-# Testing
-coverage/
-.nyc_output/
+########################################
+# Logs
+########################################
+logs/
+*.log
+*.log.*
 
-# Temporary files
+########################################
+# Misc
+########################################
+*.local
+*.cache
+*.pid
+*.seed
+*.tgz
+*.bak
 *.tmp
-*.temp
-.cache/
+tmp/
+temp/
 
+########################################
+# Test
+########################################
+test-results/
+coverage/
+nyc_output/
+
+########################################
+# Others
+########################################
+*.sublime-workspace
+*.sublime-project
+*.code-workspace
